--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.3.1
   firebase_storage: ^11.6.11
   firebase_database: ^10.4.11
+  device_info_plus: ^10.0.1
 
 dev_dependencies:
   flutter_test:
